--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="App-title">
+  Test
+</div>
+
+<nav class="App-navigation">
+  <div class="nav-wrapper">
+    <ul>
+      <li>Test</li>
+      <li>Test</li>
+      <li>Test</li>
+    </ul>
+  </div>
+</nav>
