--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -6,9 +6,12 @@
   <nav class="App-navigation">
     <div class="nav-wrapper">
       <ul>
-        <li>Test</li>
-        <li>Test</li>
-        <li>Test</li>
+        <li *ngIf="spreadsheetData.hasBreedables">
+          <a routerLinkActive="selected" routerLink="/breedables">Breedables</a>
+        </li>
+        <li *ngIf="spreadsheetData.hasValuables">
+          <a routerLinkActive="selected" routerLink="/valuables">Valuables</a>
+        </li>
       </ul>
     </div>
   </nav>
