--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
@@ -1,1 +1,9 @@
-<p>sub-navi-item works!</p>
+<li class="{{text | slugify}}">
+  <a [routerLink]="link">
+    <div class="icon"></div>
+    <div class="content">
+      <span class="title">{{text}}</span>
+      <span class="meta-info">Test</span>
+    </div>
+  </a>
+</li>
