--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -1,2 +1,8 @@
 <p>index works!</p>
+<ul class="sub-navi" *ngIf="spreadsheetData$ |async as spreadsheetData">
+
+  <app-sub-navi-item [link]="['/breedables', spreadsheetData.id, worksheet.title|slugify]"
+                     *ngFor="let worksheet of spreadsheetData.worksheets"
+                     [text]="worksheet.title"></app-sub-navi-item>
+</ul>
 <router-outlet></router-outlet>
