--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -1,8 +1,13 @@
-<p>index works!</p>
-<ul class="sub-navi" *ngIf="spreadsheetData$ |async as spreadsheetData">
+<header class="view-heder"></header>
+<div class="view-addional-content"></div>
+<aside class="view-sidebar">
+  <ul class="sub-navi" *ngIf="spreadsheetData$ |async as spreadsheetData">
 
-  <app-sub-navi-item [link]="['/breedables', spreadsheetData.id, worksheet.title|slugify]"
-                     *ngFor="let worksheet of spreadsheetData.worksheets"
-                     [text]="worksheet.title"></app-sub-navi-item>
-</ul>
-<router-outlet></router-outlet>
+    <app-sub-navi-item [link]="['/breedables', spreadsheetData.id, worksheet.title|slugify]"
+                       *ngFor="let worksheet of spreadsheetData.worksheets"
+                       [text]="worksheet.title"></app-sub-navi-item>
+  </ul>
+</aside>
+<div class="view-content">
+  <router-outlet></router-outlet>
+</div>
