added default route when clicking on header link

--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="(spreadsheetData$ | async) as spreadsheetData">
+<ng-container *ngIf="spreadsheetData">
   <div class="App-title">
     {{spreadsheetData.title}}
   </div>
@@ -7,10 +7,10 @@
     <div class="nav-wrapper">
       <ul>
         <li *ngIf="spreadsheetData.hasBreedables">
-          <a routerLinkActive="selected" routerLink="/breedables">Breedables</a>
+          <a routerLinkActive="selected" [routerLink]="['/breedables', spreadsheetData.id, breedablesLink | slugify]">Breedables</a>
         </li>
         <li *ngIf="spreadsheetData.hasValuables">
-          <a routerLinkActive="selected" routerLink="/valuables">Valuables</a>
+          <a routerLinkActive="selected" [routerLink]="['/valuables',  spreadsheetData.id, valuablesLink | slugify]">Valuables</a>
         </li>
       </ul>
     </div>
