--- a/src/app/breedable/components/ball/ball.component.html
+++ b/src/app/breedable/components/ball/ball.component.html
@@ -1,1 +1,6 @@
 <p>ball works!</p>
+<ng-container *ngIf="worksheet">
+  <app-grid>
+    <app-grid-item  *ngFor="let entry of worksheet.data" [pokemon]="entry" ></app-grid-item>
+  </app-grid>
+</ng-container>
