--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -1,11 +1,12 @@
 <header class="view-heder"></header>
 <div class="view-addional-content"></div>
 <aside class="view-sidebar">
-  <ul class="sub-navi" *ngIf="spreadsheetData$ |async as spreadsheetData">
+  <ul class="sub-navi" *ngIf="worksheets">
 
-    <app-sub-navi-item [link]="['/breedables', spreadsheetData.id, worksheet.title|slugify]"
-                       *ngFor="let worksheet of spreadsheetData.worksheets"
-                       [text]="worksheet.title"></app-sub-navi-item>
+    <app-sub-navi-item [link]="['/breedables', spreadsheetId, worksheet.title | slugify]"
+                       *ngFor="let worksheet of worksheets"
+                       [text]="worksheet.title">
+    </app-sub-navi-item>
   </ul>
 </aside>
 <div class="view-content">
