--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@ body, html {
   margin: 0;
 }
 
+body {
+  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%), radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%)
+}
+
 ul, ol {
   padding: 0;
   margin: 0;
