added loading screen on startup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,16 @@
+<div *ngIf="isLoading" class="Loading-wrapper">
+  <div class="ball">
+    <div class="top">
+      <div class="top-color"></div>
+    </div>
+    <div class="bottom">
+      <div class="bottom-color"></div>
+    </div>
+
+    <div class="Line"></div>
+    <div class="Button"></div>
+  </div>
+</div>
+
 <app-header></app-header>
 <router-outlet></router-outlet>
