added breedable view title

--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -1,4 +1,4 @@
-<header class="view-heder"></header>
+<header class="view-header">breedables</header>
 <div class="view-addional-content"></div>
 <aside class="view-sidebar">
   <ul class="sub-navi" *ngIf="worksheets">
