--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,4 +40,12 @@ a {
   display: grid;
   grid-template-columns: 320px 2fr;
   grid-gap: 2rem;
+
+  .view-header{
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 700;
+    font-size: 250%;
+    letter-spacing: -1px;
+  }
 }
