added loading message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     <div class="Line"></div>
     <div class="Button"></div>
   </div>
+  <span class="message">{{loadingMessage}}</span>
 </div>
 <app-header></app-header>
 <router-outlet></router-outlet>
