added active state for subnavi item, changed background to ::before for angled box

--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
@@ -1,5 +1,5 @@
 <li class="{{text | slugify}}">
-  <a [routerLink]="link">
+  <a [routerLink]="link" routerLinkActive="active">
     <div class="icon"></div>
     <div class="content">
       <span class="title">{{text}}</span>
