--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.scss
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.scss
@@ -10,38 +10,64 @@ li {
     font-size: 90%;
     font-weight: bold;
     letter-spacing: -1px;
-    line-height: 0;
+    line-height: 32px;
     color: #000;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(115deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 70.7%, rgba(70, 80, 79, 1) 71%);;
     border-radius: 42px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, .4);
     display: flex;
     align-items: center;
     width: 100%;
-
-    &.active {
-      background: linear-gradient(115deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 70.7%, rgba(70, 80, 79, 1) 71%);
-      color: #fff;
-    }
+    overflow: hidden;
 
 
     .icon {
+      background: #fff;
       flex-basis: 32px;
       height: 32px;
     }
 
     .content {
+      position: relative;
       flex-basis: calc(100% - 48px - 0.5rem);
       display: flex;
       justify-content: space-between;
 
+      &:before {
+        background-color: #46504f;
+        right: -150px;
+        width: 198px;
+        height: 240px;
+        content: "";
+        display: block;
+        position: absolute;
+        top: -32px;
+        transform-origin: left top;
+        transform: rotate(24deg);
+        z-index: 1;
+      }
+
+      .title {
+        flex-grow: 1;
+        background: #fff;
+      }
+
 
       .meta-info {
+        z-index: 6;
         color: #fff;
         font-weight: 500;
         font-size: 100%;
         text-align: right;
+
+
+      }
+
+    }
+
+    &.active {
+      .icon, .content .title {
+        background: #000;
+        color: #fff;
       }
     }
   }
