--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -1,11 +1,12 @@
 <ng-container *ngIf="spreadsheetData">
   <div class="App-title">
-    {{spreadsheetData.title ? spreadsheetData.title:  'Pokétrades' }}
+    {{spreadsheetData.title ? spreadsheetData.title : 'Pokétrades' }}
   </div>
 
   <nav class="App-navigation">
     <div class="nav-wrapper">
       <ul>
+        <li><a routerLink="/change-spreadsheet">Change Spreadsheet</a></li>
         <li *ngIf="spreadsheetData.hasBreedables">
           <a routerLinkActive="selected"
              [routerLink]="['/'+ spreadsheetData.id,'breedables', breedablesLink | slugify]">Breedables</a>
