fixed title of sheet changer

--- a/src/app/spreadsheet-changer/index/index.component.html
+++ b/src/app/spreadsheet-changer/index/index.component.html
@@ -1,4 +1,4 @@
-<header class="view-header full-width">breedables</header>
+<header class="view-header full-width">Change spreadsheet</header>
 <aside class="view-sidebar">
   <form (submit)="submitSearch()" [formGroup]="searchForm">
     <label for="search">Spreadsheet ID</label>
