--- a/src/app/spreadsheet-changer/index/index.component.scss
+++ b/src/app/spreadsheet-changer/index/index.component.scss
@@ -1,4 +1,4 @@
-#search, .history-entry {
+#search, .history-entry, .save-button {
   font-size: 90%;
   font-weight: bold;
   letter-spacing: -1px;
@@ -21,4 +21,8 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   margin-bottom: 16px;
+}
+
+.save-button {
+  width: auto;
 }
