fixed icon slug for sinistea, added inactive class to unowned mons

--- a/src/app/grid/minimal/minimal.component.scss
+++ b/src/app/grid/minimal/minimal.component.scss
@@ -15,6 +15,10 @@
       margin-left: -14px;
       flex-basis: 40px;
       margin-top: -16px;
+
+      &.inactive .pkspr {
+        filter: grayscale(1) opacity(0.2);
+      }
     }
   }
 }
