--- a/src/app/grid/minimal/minimal.component.html
+++ b/src/app/grid/minimal/minimal.component.html
@@ -1,3 +1,3 @@
-<div class="icon">
-  <app-pokemon>{{pokemon.name | slugify}}</app-pokemon>
+<div class="icon" [class.inactive]="!pokemon.isOwned">
+  <app-pokemon>{{pokemon.iconSlug}}</app-pokemon>
 </div>
