--- a/src/app/grid/normal/normal.component.html
+++ b/src/app/grid/normal/normal.component.html
@@ -1,1 +1,17 @@
-<p>normal works!</p>
+  <div class="icon-wrapper">
+
+    <div class="icon">
+      <app-pokemon>{{pokemon.iconSlug}}</app-pokemon>
+    </div>
+    <div class="item">
+      <span class="pkspr ball-friend"></span>
+    </div>
+
+  </div>
+  <div class="information">
+    <div>{{pokemon.name}}</div>
+    <div>{{pokemon.ability}}</div>
+  </div>
+  <div class="meta-wrapper">
+    <div class="icon"></div>
+  </div>
