--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -3,9 +3,11 @@
 <aside class="view-sidebar">
   <ul class="sub-navi" *ngIf="worksheets">
 
-    <app-sub-navi-item [link]="['/'+spreadsheetId, 'breedables',worksheet.title | slugify]"
+    <app-sub-navi-item [link]="['/'+spreadsheetId, 'breedables', worksheet.title | slugify]"
                        *ngFor="let worksheet of worksheets"
-                       [text]="worksheet.title">
+                       [text]="worksheet.title"
+                       [meta]="worksheet.ownedEntries +'/'+worksheet.data.length"
+    >
     </app-sub-navi-item>
   </ul>
 </aside>
