--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
@@ -3,7 +3,7 @@
     <div class="icon"></div>
     <div class="content">
       <span class="title">{{text}}</span>
-      <span class="meta-info">Test</span>
+      <span class="meta-info">{{meta}}</span>
     </div>
   </a>
 </li>
