added grid changer design

--- a/src/app/grid/changer/changer.component.html
+++ b/src/app/grid/changer/changer.component.html
@@ -1,1 +1,17 @@
-<p>changer works!</p>
+<label class="grid-changer-option">
+  <input value="minimal" checked="checked" name="changer" type="radio">
+  <span class="material-icons">view_comfy</span>
+  <span class="label">Minimal</span>
+</label>
+
+<label class="grid-changer-option">
+  <input value="normal" name="changer" type="radio">
+  <span class="material-icons">view_headline</span>
+  <span class="label">Normal</span>
+</label>
+
+<label class="grid-changer-option">
+  <input value="detailed" name="changer" type="radio">
+  <span class="material-icons">view_column</span>
+  <span class="label">Detailed</span>
+</label>
