--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -1,13 +1,14 @@
 <header class="view-header">breedables</header>
-<div class="view-addional-content"></div>
+<div class="view-addional-content">
+  <app-changer></app-changer>
+</div>
 <aside class="view-sidebar">
   <ul class="sub-navi" *ngIf="worksheets">
 
     <app-sub-navi-item [link]="['/'+spreadsheetId, 'breedables', worksheet.title | slugify]"
                        *ngFor="let worksheet of worksheets"
                        [text]="worksheet.title"
-                       [meta]="worksheet.ownedEntries +'/'+worksheet.data.length"
-    >
+                       [meta]="worksheet.ownedEntries +'/'+worksheet.data.length">
     </app-sub-navi-item>
   </ul>
 </aside>
