--- a/src/app/grid/changer/changer.component.scss
+++ b/src/app/grid/changer/changer.component.scss
@@ -1,6 +1,7 @@
 $grid-changer-height: 24px;
 
 .grid-changer {
+  user-select: none;
   background: #fff;
   color: #000;
   box-shadow: 0 0 6px rgba(0, 0, 0, 1);
@@ -9,6 +10,7 @@ $grid-changer-height: 24px;
   height: ($grid-changer-height + 3px);
 
   .grid-changer-option {
+    cursor: pointer;
     display: inline-flex;
     align-items: center;
   }
