ball component now changes grid appearance based on grid service

--- a/src/app/breedable/components/ball/ball.component.html
+++ b/src/app/breedable/components/ball/ball.component.html
@@ -1,5 +1,7 @@
-<app-grid *ngIf="worksheet" appearance="minimal">
-  <ng-container *ngFor="let entry of worksheet?.data; trackBy: trackBy">
-    <app-grid-item [pokemon]="entry | castBreedable"></app-grid-item>
-  </ng-container>
-</app-grid>
+<ng-container *ngxAlias="gridAppearance$ | async as gridAppearance">
+  <app-grid *ngIf="worksheet" [appearance]="gridAppearance">
+    <ng-container *ngFor="let entry of worksheet?.data; trackBy: trackBy">
+      <app-grid-item [pokemon]="entry | castBreedable"></app-grid-item>
+    </ng-container>
+  </app-grid>
+</ng-container>
