--- a/src/app/grid/normal/normal.component.scss
+++ b/src/app/grid/normal/normal.component.scss
@@ -14,12 +14,13 @@
     display: grid;
     grid-template-columns: 68px 1fr 68px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, .4);
+    font-family: 'Kulim Park', sans-serif;
 
     .inactive {
       color: rgba(0, 0, 0, .3);
 
       .icon-wrapper {
-        filter: grayscale(1) opacity(0.2);
+        filter: grayscale(1) opacity(0.1);
       }
     }
 
@@ -37,7 +38,7 @@
   height: 56px;
   width: 68px;
 
-  img {
+  .icon-foundation {
     position: absolute;
     left: 14px;
     bottom: 5px;
@@ -47,7 +48,7 @@
 
   .icon {
     position: absolute;
-    bottom: 8px;
+    bottom: 5px;
   }
 
   .item {
