added default cursor to active grid appearance

--- a/src/app/grid/changer/changer.component.scss
+++ b/src/app/grid/changer/changer.component.scss
@@ -34,6 +34,7 @@ $grid-changer-height: 24px;
     background: #313330;
     color: #fff;
     display: inline-block;
+    cursor: default;
   }
 }
 
