first try of self generated pokesprite, changed pokemon icon from ng-content to attribute binding

--- a/src/app/icon/pokemon/pokemon.component.scss
+++ b/src/app/icon/pokemon/pokemon.component.scss
@@ -1,4 +1,6 @@
-.pkspr[class*=pkmn-]{
+.pkspr[class*=pkmn-], .pkspr {
+  background-image: url('../../icon/pokesprite/pokesprite.png');
   width: 68px;
   height: 56px;
+  display: inline-block;
 }
