--- a/src/app/grid/minimal/minimal.component.html
+++ b/src/app/grid/minimal/minimal.component.html
@@ -1,3 +1,3 @@
 <div class="icon">
-  <app-pokemon>{{pokemon.iconSlug}}</app-pokemon>
+  <app-pokemon [slug]="pokemon.iconSlug"></app-pokemon>
 </div>
