changed ball guy face image location, crushed image

--- a/src/app/shared/components/ball-guy-bubble/ball-guy-bubble.component.scss
+++ b/src/app/shared/components/ball-guy-bubble/ball-guy-bubble.component.scss
@@ -1,6 +1,6 @@
 :host {
   padding-left: 115px;
-  background: url('/assets/images/ball-guy-face.png') top left no-repeat;
+  background: url('ball-guy-face.png') top left no-repeat;
   min-height: 110px;
   display: block;
 
