--- a/src/app/grid/normal/normal.component.html
+++ b/src/app/grid/normal/normal.component.html
@@ -1,5 +1,5 @@
 <div class="icon-wrapper">
-  <img class="icon-foundation" src="/assets/images/pokesprite-pokeball.svg" alt="">
+  <img class="icon-foundation" [src]="'assets/images/pokesprite-pokeball.svg'" alt="">
   <div class="icon">
     <app-pokemon [slug]="pokemon?.iconSlug"></app-pokemon>
   </div>
