added checkbox design/functionality for forms

--- a/src/app/shared/components/checkbox/checkbox.component.html
+++ b/src/app/shared/components/checkbox/checkbox.component.html
@@ -1,1 +1,6 @@
-<p>checkbox works!</p>
+<label class="inacitve-hider">
+  <input type="checkbox" id="{{ controlID }}"
+         [checked]="checked" (change)="onChange($event)">
+  <span class="material-icons">view_comfy</span>
+  <span class="label"><ng-content></ng-content></span>
+</label>
