added variable icon to checkbox.component

--- a/src/app/shared/components/checkbox/checkbox.component.html
+++ b/src/app/shared/components/checkbox/checkbox.component.html
@@ -1,6 +1,6 @@
 <label class="inacitve-hider">
   <input type="checkbox" id="{{ controlID }}"
          [checked]="checked" (change)="onChange($event)">
-  <span class="material-icons">view_comfy</span>
+  <span class="material-icons" *ngIf="icon">{{icon}}</span>
   <span class="label"><ng-content></ng-content></span>
 </label>
