--- a/src/app/grid/changer/changer.component.scss
+++ b/src/app/grid/changer/changer.component.scss
@@ -33,7 +33,8 @@ $grid-changer-height: 24px;
   input:checked ~ .label, input:checked ~ .material-icons {
     background: #313330;
     color: #fff;
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     cursor: default;
   }
 }
