added some breakpoints to detailed grid

--- a/src/app/grid/detailed/detailed.component.scss
+++ b/src/app/grid/detailed/detailed.component.scss
@@ -59,3 +59,22 @@
 
   }
 }
+
+
+@media screen and (max-width: 1400px) {
+  .grid.detailed {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .grid.detailed {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .grid.detailed {
+    grid-template-columns: 1fr;
+  }
+}
