fixed background position for type badges in different sizes

--- a/src/app/shared/components/type-badge/type-badge.component.scss
+++ b/src/app/shared/components/type-badge/type-badge.component.scss
@@ -36,51 +36,51 @@
   }
 
   &.bug {
-    background-position: 0 44px;
+    background-position: 0 50%;
   }
 
   &.ghost {
-    background-position: 20% 44px;
+    background-position: 20% 50%;
   }
 
   &.steel {
-    background-position: 40% 44px;
+    background-position: 40% 50%;
   }
 
   &.fire {
-    background-position: 60% 44px;
+    background-position: 60% 50%;
   }
 
   &.water {
-    background-position: 80% 44px;
+    background-position: 80% 50%;
   }
 
   &.grass {
-    background-position: 100% 44px;
+    background-position: 100% 50%;
   }
 
   &.electric {
-    background-position: 0 88px;
+    background-position: 0 100%;
   }
 
   &.psychic {
-    background-position: 20% 88px;
+    background-position: 20% 100%;
   }
 
   &.ice {
-    background-position: 40% 88px;
+    background-position: 40% 100%;
   }
 
   &.dragon {
-    background-position: 60% 88px;
+    background-position: 60% 100%;
   }
 
   &.dark {
-    background-position: 80% 88px;
+    background-position: 80% 100%;
   }
 
   &.fairy {
-    background-position: 100% 88px;
+    background-position: 100% 100%;
   }
 
 }
