--- a/src/app/grid/detailed/detailed.component.html
+++ b/src/app/grid/detailed/detailed.component.html
@@ -1,30 +1,40 @@
 <ng-container *ngIf="dbpokemon$ | async as dbpokemon">
-<div class="detailed-header dark-bg">{{pokemon.name}}</div>
-<div class="detailed-pokemon-info">
-  <span class="detailed-label">No. {{pokemon.dex}}</span>  {{pokemon.name}}
-  <div>
-    <app-type-badge [type]="type" size="small" *ngFor="let type of dbpokemon.types">{{type}}</app-type-badge>
-  </div>
+  <div class="detailed-header dark-bg">{{pokemon.name}}</div>
+  <div class="detailed-pokemon-info row">
+    <span class="detailed-label">No. {{pokemon.dex}}</span>  {{pokemon.name}}
+    <div>
+      <app-type-badge [type]="type" size="small" *ngFor="let type of dbpokemon.types">{{type}}</app-type-badge>
+    </div>
 
-</div>
-<div class="detailed-stats">
-  <div class="detailed-label dark-bg t-align-center">HP</div>
-  <div class="">67</div>
-  <div class="detailed-label dark-bg t-align-center">Attack</div>
-  <div class="">67</div>
-  <div class="detailed-label dark-bg t-align-center">Defense</div>
-  <div class="">67</div>
-  <div class="detailed-label dark-bg t-align-center">Sp. Atk</div>
-  <div class="">67</div>
-  <div class="detailed-label dark-bg t-align-center">Sp. Def</div>
-  <div class="">67</div>
-  <div class="detailed-label dark-bg t-align-center">Speed</div>
-  <div class="">67</div>
-</div>
-<div class="detailed-dynamax">
-  <div class="detailed-label">Dynamax Level</div>
-</div>
-<div class="detailed-moves">
-  <div class="detailed-move" *ngFor="let move of pokemon.moves">{{move}}</div>
-</div>
+  </div>
+  <div class="detailed-stats row">
+    <div class="detailed-label dark-bg t-align-center">HP</div>
+    <div class="">67</div>
+    <div class="detailed-label dark-bg t-align-center">Attack</div>
+    <div class="">67</div>
+    <div class="detailed-label dark-bg t-align-center">Defense</div>
+    <div class="">67</div>
+    <div class="detailed-label dark-bg t-align-center">Sp. Atk</div>
+    <div class="">67</div>
+    <div class="detailed-label dark-bg t-align-center">Sp. Def</div>
+    <div class="">67</div>
+    <div class="detailed-label dark-bg t-align-center">Speed</div>
+    <div class="">67</div>
+  </div>
+  <div class="detailed-dynamax row ">
+    <div class="detailed-label dark-bg">Dynamax Level</div>
+
+    <ul>
+      <li [class.on]="index <10" *ngxRepeat="10; let index"></li>
+    </ul>
+
+  </div>
+  <div class="detailed-ability row ">
+    <div class="detailed-label dark-bg">Ability</div>
+    <span class="detailed-text">{{pokemon.ability}}</span>
+
+  </div>
+  <div class="detailed-moves">
+    <div class="detailed-move" *ngFor="let move of pokemon.moves">{{move}}</div>
+  </div>
 </ng-container>
